fdo#68750: ensure that GetSuggestedEndOfSentence makes progress

Checking a string of 17399 spaces takes 20 seconds here in
GrammarCheckingIterator::GetSuggestedEndOfSentence() because
BreakIterator_Unicode::endOfSentence() will always return
0 as a result regardless of what nStartPos it gets.

Change-Id: Id02440a91d7015c2896e387854445ee5383092fa
(cherry picked from commit b23999755a865a277c29adfc1dc0c249275bfd7e)
Reviewed-on: https://gerrit.libreoffice.org/5758
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>